  * improvement: reading from a TWO-WAY-STREAM does not touch the output
    stream anymore making it thread safe to have a concurrent reader and
    a writer, for instance, in a pipe.
  * improvement: GET-SETF-EXPANDER avoids adding bindings for constant
    arguments, making compiler-macros for SETF-functions able to inspect
    their constant arguments.

changes in sbcl-1.0.24 relative to 1.0.23:
  * new feature: ARRAY-STORAGE-VECTOR provides access to the underlying data
    vector of a multidimensional SIMPLE-ARRAY.
  * new feature: the system now signals a continuable error if standard
    readtable modification is attempted. (thanks to Tobias Rittweiler)
  * new feature: DIRECTORY has been extended with a non-standard keyword
    argument :RESOLVE-SYMLINKS. (thanks to TC-Rucho)
  * enhancement: SB-BSD-SOCKETS:MAKE-SOCKET-STREAM keyword argument handling
    has been robustified and documented better. (thanks to Robert Goldman)
  * optimization: faster generic arithmetic dispatch on x86 and x86-64.
  * optimization: FORMAT ~D and ~F are now approximately 5% faster.
  * tradeoff: constant FORMAT control strings are now compiled unless
    SPACE > SPEED (previously only when SPEED > SPACE.)
  * bug fix: Red Hat Enterprise 3 mmap randomization workaround. (thanks
    to Thomas Burdick)
  * bug fix: DEFCLASS and ENSURE-CLASS-USING-CLASS are now expected to
    be thread safe.
  * bug fix: lexical type declarations are now correctly reported by
    SB-CLTL2. (reported by Larry D'Anna)
  * bug fix: STRING-TO-OCTETS did not handle :START properly when
    using UTF-8 as external format. (thanks to Luis Oliveira)
  * bug fix: errors from invalid fill-pointer values to (SETF FILL-POINTER)
    are signalled correctly. (thanks to Stas Boukarev)
  * bug fix: SET-MACRO-CHARACTER accepts NIL as the readtable
    designator. (thanks to Tobias Rittweiler)
  * bug fix: SET-DISPATCH-MACRO-CHARACTER accepts NIL as the readtable